# Mosaic-Plugin

./: .gitignore  CMakeLists.txt  MosaicObjectTemplate.cpp  MosaicObjectTemplate.h  MosaicObjectTemplate.qbs  README.md  copyPluginToMosaic.sh  plugin.cpp
src/: AudioObject.cpp  AudioObject.h  MosaicObjectTemplate.cpp  MosaicObjectTemplate.h  NumberObject.cpp  NumberObject.h  StringObject.cpp  StringObject.h  VideoObject.cpp  VideoObject.h  mpGraphics.h  mpgraphics.h  plugin.cpp
